# rosbot-adore

./: .gitignore  README.md
desktop/: docker-compose.yml  ros_entrypoint.sh
desktop/docker/: Dockerfile
desktop/src/planner_interface/: package.xml  setup.cfg  setup.py
desktop/src/planner_interface/planner_interface/: global_planner_interface.cpp
desktop/src/planner_pkg/: package.xml
ros_dev/: Dockerfile.build  Dockerfile.dev  docker-compose.plugin.yml  docker-compose.yml
ros_dev/backup_files/: Dockerfile.nav2  compose.simulation.yaml  justfile
ros_dev/backup_files/config/: nav2_dwb_params.yaml  nav2_dwb_webots_params.yaml  nav2_mppi_params.yaml  nav2_mppi_webots_params.yaml  nav2_rpp_params.yaml  nav2_rpp_webots_params.yaml
ros_dev/config/: nav2_mppi_params.yaml
ros_dev/workspace/src/adore_global_planner/: CMakeLists.txt  adore_global_planner_plugin.xml  package.xml
ros_dev/workspace/src/adore_global_planner/include/: adore_global_planner.hpp
ros_dev/workspace/src/adore_global_planner/include/adore_global_planner/: adore_global_planner.hpp
ros_dev/workspace/src/adore_global_planner/src/: adore_global_planner.cpp
ros_dev/workspace/src/install/adore_global_planner/share/adore_global_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_dev/workspace/src/log/: latest_build
